--- a/Sprint3/aoao3.ipynb
+++ b/Sprint3/aoao3.ipynb
@@ -2,177 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Общая стоимость: $1070\n",
-      "CPU: Процессор: Intel Core i7, Цена: 300, Ядра: 4\n",
-      "RAM: Оперативная память: Corsair Vengeance LPX, Цена: 120, Объем: 16ГБ\n",
-      "GPU: Видеокарта: NVIDIA GeForce RTX 3070, Цена: 500, ВИДМ: 8ГБ\n",
-      "HDD: Жесткий диск: Western Digital Black SN750 NVMe SSD, Цена: 150, Объем: 1ТБ\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Абстрактный базовый класс для всех компонентов компьютера\n",
-    "public abstract class Component\n",
-    "{\n",
-    "    // Имя компонента\n",
-    "    public string Name { get; set; }\n",
-    "    // Цена компонента\n",
-    "    public decimal Price { get; set; }\n",
-    "\n",
-    "    // Виртуальный метод для получения информации об компоненте\n",
-    "    public virtual string GetInfo()\n",
-    "    {\n",
-    "        return $\"Имя: {Name}, Цена: {Price}\";\n",
-    "    }\n",
-    "\n",
-    "    // Переопределенный метод ToString() для отображения списка компонентов\n",
-    "    public override string ToString()\n",
-    "    {\n",
-    "        return $\"{GetType().Name}: {GetInfo()}\"; // Возвращает имя текущего типа объекта\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Интерфейс для компонентов, которые можно устанавливать\n",
-    "public interface IInstallable\n",
-    "{\n",
-    "    // Метод для установки компонента\n",
-    "    void Install();\n",
-    "}\n",
-    "// Класс для процессора CPU\n",
-    "public class CPU : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Процессор: {Name}, Цена: {Price}, Ядра: 4\"; \n",
-    "    }\n",
-    "\n",
-    "    // Метод установки процессора\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка процессора: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для оперативной памяти RAM\n",
-    "public class RAM : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Оперативная память: {Name}, Цена: {Price}, Объем: 16ГБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки оперативной памяти\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка оперативной памяти: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для видеокарты GPU\n",
-    "public class GPU : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Видеокарта: {Name}, Цена: {Price}, ВИДМ: 8ГБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки видеокарты\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка видеокарты: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "// Класс для жесткого диска HDD\n",
-    "public class HDD : Component, IInstallable\n",
-    "{\n",
-    "    public override string GetInfo()\n",
-    "    {\n",
-    "        return $\"Жесткий диск: {Name}, Цена: {Price}, Объем: 1ТБ\";\n",
-    "    }\n",
-    "\n",
-    "    // Метод установки жесткого диска\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка жесткого диска: {Name}\");\n",
-    "    }\n",
-    "}\n",
-    "// Класс для представления компьютера\n",
-    "public class Computer\n",
-    "{\n",
-    "    // Список всех компонентов компьютера\n",
-    "    public List<Component> components = new List<Component>();\n",
-    "\n",
-    "    // Метод добавления нового компонента в компьютер\n",
-    "    public void AddComponent<T>(T component) where T : Component\n",
-    "    {\n",
-    "        components.Add(component);\n",
-    "    }\n",
-    "\n",
-    "    // Метод удаления компонента из компьютера\n",
-    "    public void RemoveComponent<T>(T component) where T : Component\n",
-    "    {\n",
-    "        components.Remove(component);\n",
-    "    }\n",
-    "\n",
-    "    // Метод расчета общей стоимости всех компонентов\n",
-    "    public decimal GetTotalPrice()\n",
-    "    {\n",
-    "        return components.Sum(c => c.Price);\n",
-    "    }\n",
-    "}\n",
-    "// Статический класс для создания настроек компьютера\n",
-    "public static class ComputerFactory\n",
-    "{\n",
-    "    // Метод для создания настроек компьютера на основе списка компонентов\n",
-    "    public static Computer CreateCustomConfig(List<Component> components)\n",
-    "    {\n",
-    "        var computer = new Computer();\n",
-    "        foreach (var component in components)\n",
-    "        {\n",
-    "            computer.AddComponent(component);\n",
-    "        }\n",
-    "        return computer;\n",
-    "    }\n",
-    "}\n",
-    "// Создание экземпляров компонентов\n",
-    "var cpu = new CPU { Name = \"Intel Core i7\", Price = 300m };\n",
-    "var ram = new RAM { Name = \"Corsair Vengeance LPX\", Price = 120m };\n",
-    "var gpu = new GPU { Name = \"NVIDIA GeForce RTX 3070\", Price = 500m };\n",
-    "var hdd = new HDD { Name = \"Western Digital Black SN750 NVMe SSD\", Price = 150m };\n",
-    "\n",
-    "// Создание настроек компьютера с помощью фабрики\n",
-    "var customConfig = ComputerFactory.CreateCustomConfig(new List<Component> { cpu, ram, gpu, hdd });\n",
-    "\n",
-    "// Вывод общей стоимости и информации о каждом компоненте\n",
-    "Console.WriteLine($\"Общая стоимость: ${customConfig.GetTotalPrice()}\");\n",
-    "\n",
-    "foreach (var component in customConfig.components)\n",
-    "{\n",
-    "    Console.WriteLine(component);\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -266,20 +96,20 @@
     "        Console.WriteLine($\"Устанавливается процессор: {Name}\");\n",
     "    }\n",
     "\n",
-    "    public static bool operator ==(CPU cpu1, CPU cpu2)\n",
+    "    public static bool operator ==(CPU cpu1, CPU cpu2) //статистический метод, принадлежит классу, а не отд. экземпляру\n",
     "    {\n",
-    "        if (ReferenceEquals(cpu1, cpu2)) return true;\n",
-    "        if (cpu1 is null && cpu2 is null) return false;\n",
-    "        return cpu1.Name == cpu2.Name && cpu1.Price == cpu2.Price && cpu1.Cores == cpu2.Cores;\n",
+    "        if (ReferenceEquals(cpu1, cpu2)) return true; // Сначала проверяется ссылочное равенство с помощью ReferenceEquals().\n",
+    "        if (cpu1 is null && cpu2 is null) return false; // Затем проверяются на null.\n",
+    "        return cpu1.Name == cpu2.Name && cpu1.Price == cpu2.Price && cpu1.Cores == cpu2.Cores; // Сравнение свойств Если оба объекта не null, они сравниваются по всем свойствам (Name, Price, Cores).\n",
     "\n",
     "    }\n",
     "\n",
-    "    public static bool operator !=(CPU cpu1, CPU cpu2)\n",
+    "    public static bool operator !=(CPU cpu1, CPU cpu2) //если не равны\n",
     "    {\n",
     "        return !(cpu1 == cpu2);\n",
-    "    }\n",
+    "    } \n",
     "\n",
-    "    public override bool Equals(object obj)\n",
+    "    public override bool Equals(object obj) //проверяем, что объеккт находится в классе\n",
     "    {\n",
     "        if (obj is CPU cpu)\n",
     "        {\n",
@@ -288,7 +118,7 @@
     "        return false;\n",
     "    }\n",
     "\n",
-    "    public override int GetHashCode()\n",
+    "    public override int GetHashCode() //закидываев в геткодд\n",
     "    {\n",
     "        return (Name, Price, Cores).GetHashCode();\n",
     "    }\n",
@@ -364,7 +194,7 @@
     "        return gpu1.Name == gpu2.Name && gpu1.Price == gpu2.Price && gpu1.VRAM == gpu2.VRAM;\n",
     "    }\n",
     "\n",
-    "    public static bool operator !=(GPU gpu1, GPU gpu2)\n",
+    "    public static bool operator !=(GPU gpu1, GPU gpu2) //перегкзуа \n",
     "    {\n",
     "        return !(gpu1 == gpu2);\n",
     "    }\n",
@@ -403,7 +233,7 @@
     "        Console.WriteLine($\"Устанавливается жесткий диск: {Name}\");\n",
     "    }\n",
     "\n",
-    "    public static bool operator ==(HDD hdd1, HDD hdd2)\n",
+    "    public static bool operator == (HDD hdd1, HDD hdd2)\n",
     "    {\n",
     "        if (ReferenceEquals(hdd1, hdd2)) return true;\n",
     "        if (hdd1 is null || hdd2 is null) return false;\n",
@@ -432,7 +262,7 @@
     "}\n",
     "\n",
     "// Класс Computer\n",
-    "public class Computer\n",
+    "public class Computer //создаются \n",
     "{\n",
     "    private List<Component> components = new List<Component>();\n",
     "\n",
@@ -466,13 +296,13 @@
     "    }\n",
     "}\n",
     "\n",
-    "// Статический класс ComputerFactory\n",
+    "// Статический класс ComputerFactory //создает объекты с помощью генерич. класса\n",
     "public static class ComputerFactory\n",
     "{\n",
-    "    public static Computer CreateOfficeComputer()\n",
+    "    public static Computer CreateOfficeComputer() //При создании компьютеров используются методы\n",
     "    {\n",
     "        var computer = new Computer();\n",
-    "        computer.AddComponent(new CPU(\"Intel Core i5\", 250, 6));\n",
+    "        computer.AddComponent(new CPU(\"Intel Core i5\", 250, 6)); //Внутри этих методов создаются экземпляры компонентов:\n",
     "        computer.AddComponent(new RAM(\"Kingston 8GB\", 50, 8));\n",
     "        computer.AddComponent(new GPU(\"NVIDIA GTX 1660\", 300, 6));\n",
     "        computer.AddComponent(new HDD(\"Seagate 1TB\", 70, 1000));\n",
@@ -504,7 +334,7 @@
     "// Пример сравнения двух процессоров\n",
     "var cpu1 = new CPU(\"Intel Core i5\", 250, 6);\n",
     "var cpu2 = new CPU(\"Intel Core i5\", 250, 6);\n",
-    "Console.WriteLine($\"\\nCPU1 == CPU2: {cpu1 == cpu2}\"); // Сравнение двух процессоров"
+    "Console.WriteLine($\"\\nCPU1 == CPU2: {++333333}\"); // Сравнение двух процессоров"
    ]
   }
  ],
