--- a/Sprint5/Task3.ipynb
+++ b/Sprint5/Task3.ipynb
@@ -1,5 +1,372 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:DodgerBlue\">Индивидальный проект</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Название проекта:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "### Вариант задания \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Описание проекта:</h2>\n",
+    "\n",
+    "----\n",
+    "\n",
+    "[ваш текст]\n",
+    "\n",
+    "#### Дополнительное задание\n",
+    "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) исользуйтие в проекте коллекции, делегаты, события.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color:DodgerBlue\">Реализация:</h2>\n",
+    "\n",
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Зарождение Земли, NASA, 2021, 120 минут, 0 млн.руб., язык Английский\n",
+      "Тема: Документальные фильмы, Рассказчик: Дэвид Аттенборо\n",
+      "\n",
+      "Война миров Z, Марк Форстер, 2013, 120 минут, 0 млн.руб., язык Английский\n",
+      "Жанр: приключения, боевик, ужасы, фантастика, Сиквел: Да\n",
+      "\n",
+      "фильм не найден\n",
+      "Зарождение Земли, NASA, 2021, 120 минут, 0 млн.руб., язык Английский\n",
+      "Тема: Документальные фильмы, Рассказчик: Дэвид Аттенборо\n",
+      "Война миров Z, Марк Форстер, 2013, 120 минут, 0 млн.руб., язык Английский\n",
+      "Жанр: приключения, боевик, ужасы, фантастика, Сиквел: Да\n",
+      "\n",
+      "Лямбда\n",
+      "Зарождение Земли, NASA, 2021, 120 минут, 0 млн.руб., язык Английский\n",
+      "Тема: Документальные фильмы, Рассказчик: Дэвид Аттенборо\n",
+      "\n",
+      "События\n",
+      "Имя изменено на Земля\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "// Интерфейсы\n",
+    "public interface IMovie\n",
+    "{\n",
+    "    void GetInfo(); \n",
+    "}\n",
+    "\n",
+    "public interface IWatch\n",
+    "{\n",
+    "    void Watch(); \n",
+    "}\n",
+    "\n",
+    "public interface IRate\n",
+    "{\n",
+    "    void Rent();\n",
+    "}\n",
+    "\n",
+    "public delegate void DisplayDelegate(); \n",
+    "\n",
+    "// Базовый класс\n",
+    "public abstract class Movie\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Director { get; set; }\n",
+    "    public int ReleaseYear { get; set; }\n",
+    "    public int Rating { get; private set; }\n",
+    "    public decimal Budget { get; set; }\n",
+    "    public decimal BoxOfficeRevenue { get; set; }\n",
+    "    public string Language { get; set; } // Язык фильма\n",
+    "    public int RuntimeLength { get; set; } // Новый атрибут для длительности фильма\n",
+    "    public int ProductionCost { get; set; } // Новый атрибут для затрат на производство\n",
+    "    public string IsAwardWinner { get; set; } // Новый атрибут для информации о наградах  \n",
+    "    public bool IsAvailable { get; set; } // Доступность для просмотра\n",
+    "\n",
+    "    public Movie(string title, string director, int releaseYear, int runtimeLength, string language)\n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Director = director;\n",
+    "        ReleaseYear = releaseYear;\n",
+    "        RuntimeLength = runtimeLength;\n",
+    "        Language = language;\n",
+    "        IsAvailable = true;\n",
+    "    }\n",
+    "\n",
+    "    public abstract void Watch();\n",
+    "\n",
+    "    public virtual void GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Title}, {Director}, {ReleaseYear}, {RuntimeLength} минут, {ProductionCost} млн.руб., язык {Language}\");\n",
+    "    }\n",
+    "\n",
+    "    public delegate void MovieHandler(string message);\n",
+    "    public event MovieHandler MovieRename;\n",
+    "\n",
+    "    public void Renamed(string newTitle)\n",
+    "    {\n",
+    "        Title = newTitle;\n",
+    "        // Вызываем событие после обновления модели\n",
+    "        MovieRename?.Invoke($\"Имя изменено на {newTitle}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Rate(int rating)\n",
+    "    {\n",
+    "        Rating = rating;\n",
+    "        Console.WriteLine($\"Фильм оценен на {rating}/10\");\n",
+    "    }\n",
+    "\n",
+    "      public virtual decimal CalculateProfit()\n",
+    "    {\n",
+    "        return BoxOfficeRevenue - Budget;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ProInf()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Длительность: {RuntimeLength} , затраты на производство {ProductionCost} , награды {IsAwardWinner}.\");\n",
+    "    }\n",
+    "\n",
+    "    public void ToggleAvailability()\n",
+    "    {\n",
+    "        IsAvailable = !IsAvailable;\n",
+    "        Console.WriteLine($\"{Title} теперь {(IsAvailable ? \"доступен\" : \"недоступен\")}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Documentary\n",
+    "class Documentary : Movie, IWatch\n",
+    "{\n",
+    "    public string Theme { get; set; }\n",
+    "    public string Narrator { get; set; } // Новый атрибут\n",
+    "\n",
+    "    public Documentary(string title, string director, int releaseYear, int duration, string language, string theme, string narrator)\n",
+    "        : base(title, director, releaseYear, duration, language)\n",
+    "    {\n",
+    "        Theme = theme;\n",
+    "        Narrator = narrator;\n",
+    "    }\n",
+    "\n",
+    "    public override void Watch()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Вы смотрите документальный фильм\");\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine($\"Тема: {Theme}, Рассказчик: {Narrator}\");\n",
+    "    }\n",
+    "\n",
+    "    //явная реализация\n",
+    "    void IWatch.Watch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Документальный фильм \\\"{Title}\\\" доступен\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс FeatureFilm\n",
+    "class FeatureFilm : Movie, IMovie\n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "    public bool OtherParts { get; set; } // Новый атрибут\n",
+    "\n",
+    "    public FeatureFilm(string title, string director, int releaseYear, int duration, string language, string genre, bool otherparts)\n",
+    "        : base(title, director, releaseYear, duration, language)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "        OtherParts = otherparts;\n",
+    "    }\n",
+    "\n",
+    "    public override void Watch()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Вы смотрите художественный фильм\");\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine($\"Жанр: {Genre}, Сиквел: {(OtherParts ? \"Да\" : \"Нет\")}\");\n",
+    "    }\n",
+    "    \n",
+    "    //явная реали\n",
+    "    void IMovie.GetInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Художественный фильм \\\"{Title}\\\" доступен \");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс AnimatedMovie\n",
+    "class AnimatedMovie : Movie, IWatch, IRate\n",
+    "{\n",
+    "    public string AnimationStudio { get; set; }\n",
+    "    public bool OtherParts { get; set; } // Новый атрибут\n",
+    "\n",
+    "    public AnimatedMovie(string title, string director, int releaseYear, int duration, string language, string animationStudio, bool isFamilyFriendly)\n",
+    "        : base(title, director, releaseYear, duration, language)\n",
+    "    {\n",
+    "        AnimationStudio = animationStudio;\n",
+    "        OtherParts = isFamilyFriendly;\n",
+    "    }\n",
+    "\n",
+    "    public override void Watch()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Вы смотрите анимационный фильм\");\n",
+    "    }\n",
+    "\n",
+    "    public override void GetInfo()\n",
+    "    {\n",
+    "        base.GetInfo();\n",
+    "        Console.WriteLine($\"Анимационная студия: {AnimationStudio}, Сиквел: {(OtherParts ? \"Да\" : \"Нет\")}\");\n",
+    "    }\n",
+    "\n",
+    "    void IWatch.Watch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Анимационный фильм \\\"{Title}\\\" доступен для потоковой передачи.\");\n",
+    "    }\n",
+    "\n",
+    "    void IRate.Rent()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Анимационный фильм \\\"{Title}\\\" доступен\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "//Внедрение зависимостей в сервисе управления фильмами:\n",
+    "public class MovieService // используется внедрение зависимостей через конструктор:\n",
+    "{\n",
+    "    private readonly Movie _movie;\n",
+    "\n",
+    "    public MovieService(Movie movie) //ВНЕДРЕНИЕ, конструктор принимает Movie и сохраняет его в _movie. Это внедрение зависимости.\n",
+    "    {\n",
+    "        _movie = movie;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo() //методы работы\n",
+    "    {\n",
+    "        _movie.GetInfo();\n",
+    "\n",
+    "        //проверяет, реализует ли фильм интерфейс IRate\n",
+    "        if (_movie is IRate rentable) //IS - код может работать с разными типами фильмов без необходимости знать конкретный тип\n",
+    "        {\n",
+    "            rentable.Rent();\n",
+    "        }\n",
+    "\n",
+    "        if (_movie is IWatch streamable)\n",
+    "        {\n",
+    "            streamable.Watch();\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void WatchMovie()\n",
+    "    {\n",
+    "        if (_movie.IsAvailable)\n",
+    "        {\n",
+    "            _movie.Watch();\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine($\"Фильм \\\"{_movie.Title}\\\" пока что недоступен для просмотра.\"); //ошибка\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Movie> movieList = new List<Movie>();\n",
+    "movieList.Add(new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\"));\n",
+    "movieList.Add(new FeatureFilm(\"Война миров Z\", \"Марк Форстер\", 2013, 120, \"Английский\", \"приключения, боевик, ужасы, фантастика\", true));\n",
+    "foreach (var movie in movieList)\n",
+    "{\n",
+    "    movie.GetInfo();\n",
+    "    Console.WriteLine();\n",
+    "}\n",
+    "\n",
+    "// Dictionary<TKey, TValue> - нужно организовать элементы по уникальным ключам для быстрого доступа. Это удобно для случаев, когда вы хотите находить элемент по ключу\n",
+    "Dictionary<string, Movie> movieDictionary = new Dictionary<string, Movie>();\n",
+    "movieDictionary.Add(\"1\", new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\"));\n",
+    "movieDictionary.Add(\"2\", new FeatureFilm(\"Война миров Z\", \"Марк Форстер\", 2013, 120, \"Английский\", \"приключения, боевик, ужасы, фантастика\", true));\n",
+    "if (movieDictionary.TryGetValue(\"Зарождение Земли\", out Movie foundmovie))\n",
+    "{\n",
+    "    Console.WriteLine(\"фильм:\");\n",
+    "    foundmovie.GetInfo();\n",
+    "}\n",
+    "else\n",
+    "{\n",
+    "    Console.WriteLine(\"фильм не найден\");\n",
+    "}\n",
+    "\n",
+    "Documentary documentary = new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\");\n",
+    "FeatureFilm featureFilm = new FeatureFilm(\"Война миров Z\", \"Марк Форстер\", 2013, 120, \"Английский\", \"приключения, боевик, ужасы, фантастика\", true);\n",
+    "\n",
+    "        // Присваиваем делегату метод DisplayInfo\n",
+    "DisplayDelegate displaydocumentary = documentary.GetInfo;\n",
+    "DisplayDelegate displayfeatureFilm = featureFilm.GetInfo;\n",
+    "\n",
+    "        // Вызов методов через делегаты\n",
+    "displaydocumentary();\n",
+    "displayfeatureFilm();\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "// Используем лямбда-выражение для фильтрации транспортных средств\n",
+    "Console.WriteLine(\"Лямбда\");\n",
+    "\n",
+    "List<Movie> movies_ = new List<Movie>\n",
+    "{\n",
+    "    new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\")\n",
+    "};\n",
+    "\n",
+    "var movies = movies_.OfType<Documentary>().Where(c => c.Title == \"Зарождение Земли\");\n",
+    "\n",
+    "foreach (var cat in movies)\n",
+    "{\n",
+    "    cat.GetInfo();\n",
+    "}\n",
+    "\n",
+    "Console.WriteLine();\n",
+    "Console.WriteLine(\"События\");\n",
+    "Documentary movie = new Documentary(\"Зарождение Земли\", \"NASA\", 2021, 120, \"Английский\", \"Документальные фильмы\", \"Дэвид Аттенборо\");\n",
+    "// Подписываем метод на событие\n",
+    "movie.MovieRename += OnMovieRenamed;\n",
+    "// Обновляем модель; это вызовет событие\n",
+    "movie.Renamed(\"Земля\");\n",
+    "\n",
+    "static void OnMovieRenamed(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}\n"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".NET (C#)",
