--- a/Sprint5/rew5.ipynb
+++ b/Sprint5/rew5.ipynb
@@ -16,60 +16,31 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(123,13): error CS0200: Невозможно присвоить значение свойству или индексатору \"Order.Company\" — доступ только для чтения.\r\n(124,19): error CS1061: \"Order\" не содержит определения \"Customer\", и не удалось найти доступный метод расширения \"Customer\", принимающий тип \"Order\" в качестве первого аргумента (возможно, пропущена директива using или ссылка на сборку).\r\n(107,23): error CS0122: \"Company.OnOrderStatusChanged(Order, OrderStatus)\" недоступен из-за его уровня защиты.",
-     "output_type": "error",
-     "traceback": [
-      "(123,13): error CS0200: Невозможно присвоить значение свойству или индексатору \"Order.Company\" — доступ только для чтения.\r\n",
-      "(124,19): error CS1061: \"Order\" не содержит определения \"Customer\", и не удалось найти доступный метод расширения \"Customer\", принимающий тип \"Order\" в качестве первого аргумента (возможно, пропущена директива using или ссылка на сборку).\r\n",
-      "(107,23): error CS0122: \"Company.OnOrderStatusChanged(Order, OrderStatus)\" недоступен из-за его уровня защиты."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Заказ 794dbcb9-754c-4776-8d74-7409a4f15eca изменил статус на InProgress\n",
+      "Заказ 3d99e6a2-d968-47c5-82ed-f8b658f4d4dd изменил статус на Completed\n",
+      "Employee Report:\n",
+      "- Иван Иванов: 1 orders processed\n",
+      "- Мария Смирнова: 1 orders processed\n",
+      "\n",
+      "Заказы в работе:\n",
+      "- Заказ 794dbcb9-754c-4776-8d74-7409a4f15eca: Разработка веб-сайта\n"
      ]
     }
    ],
    "source": [
-    "public class Company\n",
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    "\n",
+    "// Enum для статусов заказов\n",
+    "public enum OrderStatus\n",
     "{\n",
-    "    public string Name { get; set; }\n",
-    "    public List<Employee> Employees { get; set; } = new List<Employee>();\n",
-    "    public List<Order> Orders { get; set; } = new List<Order>();\n",
-    "\n",
-    "    public Company(string name)\n",
-    "    {\n",
-    "        Name = name;\n",
-    "    }\n",
-    "\n",
-    "    public void AssignEmployeeToOrder(Order order, Employee employee)\n",
-    "    {\n",
-    "        order.AssignedEmployee = employee;\n",
-    "    }\n",
-    "\n",
-    "    public void UpdateOrderStatus(Order order, OrderStatus status)\n",
-    "    {\n",
-    "        order.Status = status;\n",
-    "        OnOrderStatusChanged(order, status);\n",
-    "    }\n",
-    "\n",
-    "    protected virtual void OnOrderStatusChanged(Order order, OrderStatus status)\n",
-    "    {\n",
-    "        StatusChanged?.Invoke(this, new OrderEventArgs(order, status));\n",
-    "    }\n",
-    "\n",
-    "    public event EventHandler<OrderEventArgs> StatusChanged;\n",
-    "}\n",
-    "\n",
-    "public class Employee\n",
-    "{\n",
-    "    public string FirstName { get; set; }\n",
-    "    public string LastName { get; set; }\n",
-    "    public string Position { get; set; }\n",
-    "    public int OrdersProcessed { get; set; }\n",
-    "\n",
-    "    public Employee(string firstName, string lastName, string position)\n",
-    "    {\n",
-    "        FirstName = firstName;\n",
-    "        LastName = lastName;\n",
-    "        Position = position;\n",
-    "    }\n",
+    "    Created,\n",
+    "    InProgress,\n",
+    "    Completed\n",
     "}\n",
     "\n",
     "public class Customer\n",
@@ -77,101 +48,150 @@
     "    public string FirstName { get; set; }\n",
     "    public string LastName { get; set; }\n",
     "    public string PhoneNumber { get; set; }\n",
+    "\n",
+    "    public Customer(string firstName, string lastName, string phoneNumber)\n",
+    "    {\n",
+    "        FirstName = firstName;\n",
+    "        LastName = lastName;\n",
+    "        PhoneNumber = phoneNumber;\n",
+    "    }\n",
     "}\n",
     "\n",
+    "public class Employee\n",
+    "{\n",
+    "    public string FirstName { get; set; }\n",
+    "    public string LastName { get; set; }\n",
+    "    public string Position { get; set; }\n",
+    "    public int OrdersProcessed { get; private set; }\n",
+    "\n",
+    "    public Employee(string firstName, string lastName, string position)\n",
+    "    {\n",
+    "        FirstName = firstName;\n",
+    "        LastName = lastName;\n",
+    "        Position = position;\n",
+    "        OrdersProcessed = 0;\n",
+    "    }\n",
+    "\n",
+    "    public void ProcessOrder()\n",
+    "    {\n",
+    "        OrdersProcessed++;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Класс для описания заказа\n",
     "public class Order\n",
     "{\n",
-    "    public int OrderId { get; private set; }\n",
+    "    public Guid OrderId { get; }\n",
     "    public string Description { get; set; }\n",
     "    public Employee AssignedEmployee { get; set; }\n",
-    "    public OrderStatus Status { get; set; }\n",
-    "    public DateTime CreatedAt { get; private set; }\n",
+    "    public Customer Customer { get; set; }\n",
+    "    public OrderStatus Status { get; private set; }\n",
+    "    public DateTime CreatedAt { get; }\n",
     "\n",
-    "    // Добавим свойство для доступа к компании\n",
-    "    public Company Company => throw new InvalidOperationException(\"Order не содержит информации о компании\");\n",
-    "\n",
-    "    public Order(int orderId, string description)\n",
+    "    public Order(string description, Customer customer)\n",
     "    {\n",
-    "        OrderId = orderId;\n",
+    "        OrderId = Guid.NewGuid();\n",
     "        Description = description;\n",
+    "        Customer = customer;\n",
+    "        Status = OrderStatus.Created;\n",
     "        CreatedAt = DateTime.Now;\n",
     "    }\n",
-    "}\n",
     "\n",
-    "public enum OrderStatus\n",
-    "{\n",
-    "    Created,\n",
-    "    InProgress,\n",
-    "    Completed\n",
-    "}\n",
-    "public delegate void OrderStatusHandler(object sender, OrderEventArgs e);\n",
+    "    public event Action<Order> StatusChanged;\n",
     "\n",
-    "public class OrderEventArgs : EventArgs\n",
-    "{\n",
-    "    public Order Order { get; }\n",
-    "    public OrderStatus NewStatus { get; }\n",
-    "\n",
-    "    public OrderEventArgs(Order order, OrderStatus newStatus)\n",
+    "    public void UpdateStatus(OrderStatus newStatus)\n",
     "    {\n",
-    "        Order = order;\n",
-    "        NewStatus = newStatus;\n",
+    "        Status = newStatus;\n",
+    "        StatusChanged?.Invoke(this);\n",
     "    }\n",
     "}\n",
     "\n",
-    "public interface IOrderProcessor\n",
+    "public class Company\n",
     "{\n",
-    "    void ProcessOrder(Order order);\n",
-    "}\n",
+    "    public string Name { get; set; }\n",
+    "    public List<Employee> Employees { get; } = new List<Employee>();\n",
+    "    public List<Order> Orders { get; } = new List<Order>();\n",
     "\n",
-    "public class DefaultOrderProcessor : IOrderProcessor\n",
-    "{\n",
-    "    public void ProcessOrder(Order order)\n",
+    "    public Company(string name)\n",
     "    {\n",
-    "        Console.WriteLine($\"Processing order {order.OrderId}: {order.Description}\");\n",
-    "        // Здесь бы могло быть реальная логика обработки заказа\n",
-    "        order.Status = OrderStatus.InProgress;\n",
-    "        order.AssignedEmployee.OrdersProcessed++;\n",
-    "        \n",
-    "        // Уведомление о статусе заказа\n",
-    "        order.Company.OnOrderStatusChanged?.Invoke(order, order.Status);\n",
+    "        Name = name;\n",
     "    }\n",
-    "}\n",
-    "var company = new Company(\"МegaCorp\");\n",
-    "        \n",
-    "        var employee1 = new Employee(\"Иван\", \"Иванов\", \"Менеджер\");\n",
-    "        var employee2 = new Employee(\"Петр\", \"Петров\", \"Разработчик\");\n",
     "\n",
-    "        company.Employees.Add(employee1);\n",
-    "        company.Employees.Add(employee2);\n",
+    "    public void AddEmployee(Employee employee)\n",
+    "    {\n",
+    "        Employees.Add(employee);\n",
+    "    }\n",
     "\n",
-    "        var customer = new Customer { FirstName = \"Анна\", LastName = \"Сидорова\", PhoneNumber = \"+7(495)1234567\" };\n",
+    "    public void AddOrder(Order order)\n",
+    "    {\n",
+    "        Orders.Add(order);\n",
+    "    }\n",
     "\n",
-    "        for (int i = 1; i <= 5; i++)\n",
+    "    public void AssignEmployeeToOrder(Order order, Employee employee)\n",
+    "    {\n",
+    "        order.AssignedEmployee = employee;\n",
+    "    }\n",
+    "\n",
+    "    public List<Order> GetOrdersByStatus(OrderStatus status)\n",
+    "    {\n",
+    "        return Orders.Where(o => o.Status == status).ToList();\n",
+    "    }\n",
+    "\n",
+    "    public List<Order> GetOrdersByCustomer(Customer customer)\n",
+    "    {\n",
+    "        return Orders.Where(o => o.Customer == customer).ToList();\n",
+    "    }\n",
+    "\n",
+    "    public void GenerateEmployeeReport()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Employee Report:\");\n",
+    "        foreach (var employee in Employees)\n",
     "        {\n",
-    "            var order = new Order(i, $\"Заказ номер {i}\");\n",
-    "            order.Company = company;\n",
-    "            order.Customer = customer;\n",
-    "\n",
-    "            Console.WriteLine($\"Создан заказ {order.OrderId}: {order.Description}\");\n",
-    "\n",
-    "            // Назначение сотрудника на обработку заказа\n",
-    "            company.AssignEmployeeToOrder(order, employee1);\n",
-    "\n",
-    "            // Обработка заказа\n",
-    "            var processor = new DefaultOrderProcessor();\n",
-    "            processor.ProcessOrder(order);\n",
-    "\n",
-    "            // Изменение статуса заказа\n",
-    "            company.UpdateOrderStatus(order, OrderStatus.Completed);\n",
-    "\n",
-    "            Console.WriteLine($\"Статус заказа {order.OrderId}: {order.Status}\");\n",
+    "            Console.WriteLine($\"- {employee.FirstName} {employee.LastName}: {employee.OrdersProcessed} orders processed\");\n",
     "        }\n",
+    "    }\n",
+    "}\n",
     "\n",
-    "        // Отчет по сотрудникам\n",
-    "        foreach (var emp in company.Employees)\n",
-    "        {\n",
-    "            Console.WriteLine($\"{emp.FirstName} {emp.LastName} ({emp.Position}): Обработано заказов - {emp.OrdersProcessed}\");\n",
-    "        }"
+    "var company = new Company(\"Технологические Решения\");\n",
+    "\n",
+    "var emp1 = new Employee(\"Иван\", \"Иванов\", \"Менеджер\");\n",
+    "var emp2 = new Employee(\"Мария\", \"Смирнова\", \"Разработчик\");\n",
+    "company.AddEmployee(emp1);\n",
+    "company.AddEmployee(emp2);\n",
+    "\n",
+    "var customer1 = new Customer(\"Алиса\", \"Петрова\", \"123-456-7890\");\n",
+    "var customer2 = new Customer(\"Борис\", \"Волков\", \"098-765-4321\");\n",
+    "\n",
+    "var order1 = new Order(\"Разработка веб-сайта\", customer1);\n",
+    "var order2 = new Order(\"Исправление проблем с сервером\", customer2);\n",
+    "\n",
+    "order1.StatusChanged += order =>\n",
+    "{\n",
+    "    Console.WriteLine($\"Заказ {order.OrderId} изменил статус на {order.Status}\");\n",
+    "};\n",
+    "\n",
+    "order2.StatusChanged += order =>\n",
+    "{\n",
+    "    Console.WriteLine($\"Заказ {order.OrderId} изменил статус на {order.Status}\");\n",
+    "};\n",
+    "\n",
+    "company.AddOrder(order1);\n",
+    "company.AddOrder(order2);\n",
+    "\n",
+    "company.AssignEmployeeToOrder(order1, emp1);\n",
+    "company.AssignEmployeeToOrder(order2, emp2);\n",
+    "\n",
+    "order1.UpdateStatus(OrderStatus.InProgress);\n",
+    "emp1.ProcessOrder();\n",
+    "order2.UpdateStatus(OrderStatus.Completed);\n",
+    "emp2.ProcessOrder();\n",
+    "company.GenerateEmployeeReport();\n",
+    "\n",
+    "Console.WriteLine(\"\\nЗаказы в работе:\");\n",
+    "foreach (var order in company.GetOrdersByStatus(OrderStatus.InProgress))\n",
+    "{\n",
+    "    Console.WriteLine($\"- Заказ {order.OrderId}: {order.Description}\");\n",
+    "}"
    ]
   }
  ],
