--- a/Sprint5/rew5.ipynb
+++ b/Sprint5/rew5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -19,14 +19,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Заказ 794dbcb9-754c-4776-8d74-7409a4f15eca изменил статус на InProgress\n",
-      "Заказ 3d99e6a2-d968-47c5-82ed-f8b658f4d4dd изменил статус на Completed\n",
+      "Заказ: 7bf92c0f-568c-4287-b960-f6c3cd299635 (Дизайн сайта) изменил статус на InProgress\n",
+      "Заказ: 8d29d3f8-6594-4be7-b113-c6e66a1053d8 (База данный сайта) теперь Completed\n",
       "Employee Report:\n",
-      "- Иван Иванов: 1 orders processed\n",
-      "- Мария Смирнова: 1 orders processed\n",
+      "- Валерия Шананина: 1 orders processed\n",
+      "- Анастасия Косишнева: 1 orders processed\n",
       "\n",
       "Заказы в работе:\n",
-      "- Заказ 794dbcb9-754c-4776-8d74-7409a4f15eca: Разработка веб-сайта\n"
+      "Заказ🔧 7bf92c0f-568c-4287-b960-f6c3cd299635: Дизайн сайта - В работе у Валерия\n",
+      "\n",
+      "Статус заказов:\n",
+      "⏳ 7bf92c0f-568c-4287-b960-f6c3cd299635: Дизайн сайта - В процессе\n",
+      "✅ 8d29d3f8-6594-4be7-b113-c6e66a1053d8: База данный сайта - Окончено\n"
      ]
     }
    ],
@@ -36,20 +40,20 @@
     "using System.Linq;\n",
     "\n",
     "// Enum для статусов заказов\n",
-    "public enum OrderStatus\n",
+    "public enum OrderStatus //определяются перечисления\n",
     "{\n",
     "    Created,\n",
     "    InProgress,\n",
     "    Completed\n",
     "}\n",
     "\n",
-    "public class Customer\n",
+    "public class Customer //заказчик\n",
     "{\n",
-    "    public string FirstName { get; set; }\n",
-    "    public string LastName { get; set; }\n",
-    "    public string PhoneNumber { get; set; }\n",
+    "    public string FirstName { get; set; } //имя заказчика\n",
+    "    public string LastName { get; set; } //фамилия\n",
+    "    public string PhoneNumber { get; set; } // номер телефона\n",
     "\n",
-    "    public Customer(string firstName, string lastName, string phoneNumber)\n",
+    "    public Customer(string firstName, string lastName, string phoneNumber) //добавления заказчика\n",
     "    {\n",
     "        FirstName = firstName;\n",
     "        LastName = lastName;\n",
@@ -57,12 +61,12 @@
     "    }\n",
     "}\n",
     "\n",
-    "public class Employee\n",
+    "public class Employee //сотрудник\n",
     "{\n",
     "    public string FirstName { get; set; }\n",
     "    public string LastName { get; set; }\n",
-    "    public string Position { get; set; }\n",
-    "    public int OrdersProcessed { get; private set; }\n",
+    "    public string Position { get; set; } //должность\n",
+    "    public int OrdersProcessed { get; private set; } //кол. обработанных зака\n",
     "\n",
     "    public Employee(string firstName, string lastName, string position)\n",
     "    {\n",
@@ -78,71 +82,73 @@
     "    }\n",
     "}\n",
     "\n",
-    "// Класс для описания заказа\n",
-    "public class Order\n",
+    "\n",
+    "public class Order //заказ\n",
     "{\n",
-    "    public Guid OrderId { get; }\n",
-    "    public string Description { get; set; }\n",
-    "    public Employee AssignedEmployee { get; set; }\n",
+    "    public Guid OrderId { get; } //индефикатор\n",
+    "    public string Description { get; set; } //описание заказа\n",
+    "    public Employee AssignedEmployee { get; set; } //ответственый сотрудник\n",
     "    public Customer Customer { get; set; }\n",
     "    public OrderStatus Status { get; private set; }\n",
-    "    public DateTime CreatedAt { get; }\n",
+    "    public DateTime CreatedAt { get; } //дата создания\n",
     "\n",
     "    public Order(string description, Customer customer)\n",
     "    {\n",
-    "        OrderId = Guid.NewGuid();\n",
+    "        OrderId = Guid.NewGuid(); //генерация уникального номера\n",
     "        Description = description;\n",
     "        Customer = customer;\n",
     "        Status = OrderStatus.Created;\n",
     "        CreatedAt = DateTime.Now;\n",
     "    }\n",
-    "\n",
-    "    public event Action<Order> StatusChanged;\n",
-    "\n",
+    "//событие\n",
+    "    public event Action<Order> StatusChanged; //событие\n",
     "    public void UpdateStatus(OrderStatus newStatus)\n",
     "    {\n",
-    "        Status = newStatus;\n",
-    "        StatusChanged?.Invoke(this);\n",
+    "        Status = newStatus; //Изменяет статус заказа на указанный новый статус\n",
+    "        StatusChanged?.Invoke(this); //Вызывает все подписчики события StatusChanged, передавая им сам объект заказа.\n",
     "    }\n",
     "}\n",
+    "\n",
+    "//StatusChanged позволяет другим компонентам автоматически реагировать на изменения статуса заказа без прямого взаимодействия с объектом заказа.\n",
+    "//? - Если ни один подписчик не зарегистрирован, метод просто пропустит вызов.\n",
     "\n",
     "public class Company\n",
     "{\n",
     "    public string Name { get; set; }\n",
-    "    public List<Employee> Employees { get; } = new List<Employee>();\n",
-    "    public List<Order> Orders { get; } = new List<Order>();\n",
+    "    public List<Employee> Employees { get; } = new List<Employee>(); //список сотрудников\n",
+    "    public List<Order> Orders { get; } = new List<Order>(); //список заказов\n",
     "\n",
     "    public Company(string name)\n",
     "    {\n",
     "        Name = name;\n",
     "    }\n",
     "\n",
-    "    public void AddEmployee(Employee employee)\n",
+    "    public void AddEmployee(Employee employee) //Добавление сотрудника\n",
     "    {\n",
     "        Employees.Add(employee);\n",
     "    }\n",
     "\n",
-    "    public void AddOrder(Order order)\n",
+    "    public void AddOrder(Order order) //Добавление заказа\n",
     "    {\n",
     "        Orders.Add(order);\n",
     "    }\n",
     "\n",
-    "    public void AssignEmployeeToOrder(Order order, Employee employee)\n",
+    "    public void AssignEmployeeToOrder(Order order, Employee employee) //Назначение сотрудника на заказ\n",
     "    {\n",
     "        order.AssignedEmployee = employee;\n",
     "    }\n",
     "\n",
-    "    public List<Order> GetOrdersByStatus(OrderStatus status)\n",
+    "    public List<Order> GetOrdersByStatus(OrderStatus status) //Получение заказов по статусу\n",
     "    {\n",
-    "        return Orders.Where(o => o.Status == status).ToList();\n",
+    "        return Orders.Where(o => o.Status == status).ToList(); //Фильтрует список заказов по заданному статусу.\n",
     "    }\n",
     "\n",
-    "    public List<Order> GetOrdersByCustomer(Customer customer)\n",
+    "    public List<Order> GetOrdersByCustomer(Customer customer) //Получение заказов по клиенту\n",
     "    {\n",
-    "        return Orders.Where(o => o.Customer == customer).ToList();\n",
+    "        return Orders.Where(o => o.Customer == customer).ToList(); //Фильтрует список заказов по конкретному клиенту.\n",
     "    }\n",
     "\n",
-    "    public void GenerateEmployeeReport()\n",
+    "    public void GenerateEmployeeReport() //Генерация отчета о сотрудниках\n",
     "    {\n",
     "        Console.WriteLine(\"Employee Report:\");\n",
     "        foreach (var employee in Employees)\n",
@@ -151,28 +157,28 @@
     "        }\n",
     "    }\n",
     "}\n",
+    "//Выводит отчет о всех сотрудниках компании, показывая их имена, фамилии и количество обработанных ими заказов.\n",
     "\n",
-    "var company = new Company(\"Технологические Решения\");\n",
-    "\n",
-    "var emp1 = new Employee(\"Иван\", \"Иванов\", \"Менеджер\");\n",
-    "var emp2 = new Employee(\"Мария\", \"Смирнова\", \"Разработчик\");\n",
+    "var company = new Company(\"Аптайм\");\n",
+    "var emp1 = new Employee(\"Валерия\", \"Шананина\", \"Крутой разрабочик\");\n",
+    "var emp2 = new Employee(\"Анастасия\", \"Косишнева\", \"Подает пиццу\");\n",
     "company.AddEmployee(emp1);\n",
     "company.AddEmployee(emp2);\n",
     "\n",
-    "var customer1 = new Customer(\"Алиса\", \"Петрова\", \"123-456-7890\");\n",
-    "var customer2 = new Customer(\"Борис\", \"Волков\", \"098-765-4321\");\n",
+    "var customer1 = new Customer(\"Аделя\", \"Шаукерова\", \"123-456-7890\");\n",
+    "var customer2 = new Customer(\"Егорка\", \"Поляниский\", \"098-765-4321\");\n",
     "\n",
-    "var order1 = new Order(\"Разработка веб-сайта\", customer1);\n",
-    "var order2 = new Order(\"Исправление проблем с сервером\", customer2);\n",
+    "var order1 = new Order(\"Дизайн сайта\", customer1);\n",
+    "var order2 = new Order(\"База данный сайта\", customer2);\n",
     "\n",
     "order1.StatusChanged += order =>\n",
     "{\n",
-    "    Console.WriteLine($\"Заказ {order.OrderId} изменил статус на {order.Status}\");\n",
+    "    Console.WriteLine($\"Заказ: {order.OrderId} ({order.Description}) изменил статус на {order.Status}\");\n",
     "};\n",
     "\n",
     "order2.StatusChanged += order =>\n",
     "{\n",
-    "    Console.WriteLine($\"Заказ {order.OrderId} изменил статус на {order.Status}\");\n",
+    "    Console.WriteLine($\"Заказ: {order.OrderId} ({order.Description}) теперь {order.Status}\");\n",
     "};\n",
     "\n",
     "company.AddOrder(order1);\n",
@@ -190,8 +196,19 @@
     "Console.WriteLine(\"\\nЗаказы в работе:\");\n",
     "foreach (var order in company.GetOrdersByStatus(OrderStatus.InProgress))\n",
     "{\n",
-    "    Console.WriteLine($\"- Заказ {order.OrderId}: {order.Description}\");\n",
-    "}"
+    "    Console.WriteLine($\"Заказ🔧 {order.OrderId}: {order.Description} - В работе у {order.AssignedEmployee?.FirstName ?? \"неизвестного\"}\");\n",
+    "}\n",
+    "\n",
+    "Console.WriteLine(\"\\nСтатус заказов:\");\n",
+    "foreach (var order in company.Orders)\n",
+    "{\n",
+    "    if (order.Status == OrderStatus.Completed)\n",
+    "        Console.WriteLine($\"✅ {order.OrderId}: {order.Description} - Окончено\");\n",
+    "    else if (order.Status == OrderStatus.InProgress)\n",
+    "        Console.WriteLine($\"⏳ {order.OrderId}: {order.Description} - В процессе\");\n",
+    "    else\n",
+    "        Console.WriteLine($\"❓ {order.OrderId}: {order.Description} - Создан\");\n",
+    "}\n"
    ]
   }
  ],
